# proto/prototype/transport.pb.go
@@ -1,218 +1,0 @@
-// Code generated by protoc-gen-go. DO NOT EDIT.
-// versions:
-// 	protoc-gen-go v1.27.1
-// 	protoc        v3.17.3
-// source: prototype/transport.proto
-
-package prototype
-
-import (
-	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
-	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
-	reflect "reflect"
-	sync "sync"
-)
-
-const (
-	// Verify that this generated code is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
-	// Verify that runtime/protoimpl is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
-)
-
-type UTxO struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-
-	BlockNum  uint64 `protobuf:"varint,1,opt,name=blockNum,proto3" json:"blockNum,omitempty"`
-	Hash      []byte `protobuf:"bytes,2,opt,name=hash,proto3" json:"hash,omitempty"`
-	Index     uint32 `protobuf:"varint,3,opt,name=index,proto3" json:"index,omitempty"`
-	From      []byte `protobuf:"bytes,4,opt,name=from,proto3" json:"from,omitempty"`
-	To        []byte `protobuf:"bytes,5,opt,name=to,proto3" json:"to,omitempty"`
-	Node      []byte `protobuf:"bytes,6,opt,name=node,proto3" json:"node,omitempty"`
-	Amount    uint64 `protobuf:"varint,7,opt,name=amount,proto3" json:"amount,omitempty"`
-	Timestamp uint64 `protobuf:"varint,8,opt,name=timestamp,proto3" json:"timestamp,omitempty"`
-	Txtype    uint32 `protobuf:"varint,9,opt,name=txtype,proto3" json:"txtype,omitempty"`
-}
-
-func (x *UTxO) Reset() {
-	*x = UTxO{}
-	if protoimpl.UnsafeEnabled {
-		mi := &file_prototype_transport_proto_msgTypes[0]
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		ms.StoreMessageInfo(mi)
-	}
-}
-
-func (x *UTxO) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*UTxO) ProtoMessage() {}
-
-func (x *UTxO) ProtoReflect() protoreflect.Message {
-	mi := &file_prototype_transport_proto_msgTypes[0]
-	if protoimpl.UnsafeEnabled && x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use UTxO.ProtoReflect.Descriptor instead.
-func (*UTxO) Descriptor() ([]byte, []int) {
-	return file_prototype_transport_proto_rawDescGZIP(), []int{0}
-}
-
-func (x *UTxO) GetBlockNum() uint64 {
-	if x != nil {
-		return x.BlockNum
-	}
-	return 0
-}
-
-func (x *UTxO) GetHash() []byte {
-	if x != nil {
-		return x.Hash
-	}
-	return nil
-}
-
-func (x *UTxO) GetIndex() uint32 {
-	if x != nil {
-		return x.Index
-	}
-	return 0
-}
-
-func (x *UTxO) GetFrom() []byte {
-	if x != nil {
-		return x.From
-	}
-	return nil
-}
-
-func (x *UTxO) GetTo() []byte {
-	if x != nil {
-		return x.To
-	}
-	return nil
-}
-
-func (x *UTxO) GetNode() []byte {
-	if x != nil {
-		return x.Node
-	}
-	return nil
-}
-
-func (x *UTxO) GetAmount() uint64 {
-	if x != nil {
-		return x.Amount
-	}
-	return 0
-}
-
-func (x *UTxO) GetTimestamp() uint64 {
-	if x != nil {
-		return x.Timestamp
-	}
-	return 0
-}
-
-func (x *UTxO) GetTxtype() uint32 {
-	if x != nil {
-		return x.Txtype
-	}
-	return 0
-}
-
-var File_prototype_transport_proto protoreflect.FileDescriptor
-
-var file_prototype_transport_proto_rawDesc = []byte{
-	0x0a, 0x19, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x74, 0x79, 0x70, 0x65, 0x2f, 0x74, 0x72, 0x61, 0x6e,
-	0x73, 0x70, 0x6f, 0x72, 0x74, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x0d, 0x72, 0x64, 0x6f,
-	0x2e, 0x74, 0x72, 0x61, 0x6e, 0x73, 0x70, 0x6f, 0x72, 0x74, 0x22, 0xd2, 0x01, 0x0a, 0x04, 0x55,
-	0x54, 0x78, 0x4f, 0x12, 0x1a, 0x0a, 0x08, 0x62, 0x6c, 0x6f, 0x63, 0x6b, 0x4e, 0x75, 0x6d, 0x18,
-	0x01, 0x20, 0x01, 0x28, 0x04, 0x52, 0x08, 0x62, 0x6c, 0x6f, 0x63, 0x6b, 0x4e, 0x75, 0x6d, 0x12,
-	0x12, 0x0a, 0x04, 0x68, 0x61, 0x73, 0x68, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0c, 0x52, 0x04, 0x68,
-	0x61, 0x73, 0x68, 0x12, 0x14, 0x0a, 0x05, 0x69, 0x6e, 0x64, 0x65, 0x78, 0x18, 0x03, 0x20, 0x01,
-	0x28, 0x0d, 0x52, 0x05, 0x69, 0x6e, 0x64, 0x65, 0x78, 0x12, 0x12, 0x0a, 0x04, 0x66, 0x72, 0x6f,
-	0x6d, 0x18, 0x04, 0x20, 0x01, 0x28, 0x0c, 0x52, 0x04, 0x66, 0x72, 0x6f, 0x6d, 0x12, 0x0e, 0x0a,
-	0x02, 0x74, 0x6f, 0x18, 0x05, 0x20, 0x01, 0x28, 0x0c, 0x52, 0x02, 0x74, 0x6f, 0x12, 0x12, 0x0a,
-	0x04, 0x6e, 0x6f, 0x64, 0x65, 0x18, 0x06, 0x20, 0x01, 0x28, 0x0c, 0x52, 0x04, 0x6e, 0x6f, 0x64,
-	0x65, 0x12, 0x16, 0x0a, 0x06, 0x61, 0x6d, 0x6f, 0x75, 0x6e, 0x74, 0x18, 0x07, 0x20, 0x01, 0x28,
-	0x04, 0x52, 0x06, 0x61, 0x6d, 0x6f, 0x75, 0x6e, 0x74, 0x12, 0x1c, 0x0a, 0x09, 0x74, 0x69, 0x6d,
-	0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x18, 0x08, 0x20, 0x01, 0x28, 0x04, 0x52, 0x09, 0x74, 0x69,
-	0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x12, 0x16, 0x0a, 0x06, 0x74, 0x78, 0x74, 0x79, 0x70,
-	0x65, 0x18, 0x09, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x06, 0x74, 0x78, 0x74, 0x79, 0x70, 0x65, 0x42,
-	0x17, 0x5a, 0x15, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x74, 0x79, 0x70, 0x65, 0x2f, 0x2e, 0x3b, 0x70,
-	0x72, 0x6f, 0x74, 0x6f, 0x74, 0x79, 0x70, 0x65, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
-}
-
-var (
-	file_prototype_transport_proto_rawDescOnce sync.Once
-	file_prototype_transport_proto_rawDescData = file_prototype_transport_proto_rawDesc
-)
-
-func file_prototype_transport_proto_rawDescGZIP() []byte {
-	file_prototype_transport_proto_rawDescOnce.Do(func() {
-		file_prototype_transport_proto_rawDescData = protoimpl.X.CompressGZIP(file_prototype_transport_proto_rawDescData)
-	})
-	return file_prototype_transport_proto_rawDescData
-}
-
-var file_prototype_transport_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
-var file_prototype_transport_proto_goTypes = []interface{}{
-	(*UTxO)(nil), // 0: rdo.transport.UTxO
-}
-var file_prototype_transport_proto_depIdxs = []int32{
-	0, // [0:0] is the sub-list for method output_type
-	0, // [0:0] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
-}
-
-func init() { file_prototype_transport_proto_init() }
-func file_prototype_transport_proto_init() {
-	if File_prototype_transport_proto != nil {
-		return
-	}
-	if !protoimpl.UnsafeEnabled {
-		file_prototype_transport_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*UTxO); i {
-			case 0:
-				return &v.state
-			case 1:
-				return &v.sizeCache
-			case 2:
-				return &v.unknownFields
-			default:
-				return nil
-			}
-		}
-	}
-	type x struct{}
-	out := protoimpl.TypeBuilder{
-		File: protoimpl.DescBuilder{
-			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
-			RawDescriptor: file_prototype_transport_proto_rawDesc,
-			NumEnums:      0,
-			NumMessages:   1,
-			NumExtensions: 0,
-			NumServices:   0,
-		},
-		GoTypes:           file_prototype_transport_proto_goTypes,
-		DependencyIndexes: file_prototype_transport_proto_depIdxs,
-		MessageInfos:      file_prototype_transport_proto_msgTypes,
-	}.Build()
-	File_prototype_transport_proto = out.File
-	file_prototype_transport_proto_rawDesc = nil
-	file_prototype_transport_proto_goTypes = nil
-	file_prototype_transport_proto_depIdxs = nil
-}
